objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Hardware_Color__c</fullName>
        <label>Hardware Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Measurement_Standard__c</fullName>
        <label>Measurement Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Metric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Voltage__c</fullName>
        <label>System Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>120V</fullName>
                </value>
                <value>
                    <fullName>240V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>